Fix #129: playlist header in widescreen (two column) layout missing background filter

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -170,7 +170,6 @@
 
 	@supports (backdrop-filter: blur(10px)) {
 		#playlist-tools {
-		background: none;
 		box-shadow: 0 0;
 		}
 
